feat: join space endpoint
