# src/interfaces/space.requests.ts
@@ -4,3 +4,9 @@ export interface CreateSpaceRequest {
   description: string;
   user: string;
 }
+
+export interface JoinSpaceRequest {
+  spaceCodeInput: string;
+  spaceCode: string;
+  user: string;
+}
