# src/interfaces/space.responses.ts
@@ -1,0 +1,6 @@
+import { Spaces } from "./models/space.interface";
+
+export interface GetAllSpacesResponse {
+  mySpaces: Spaces[];
+  memberSpaces: Spaces[];
+}
